--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,9 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Bee Eater Images</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
+      Use images of <strong>Swallow Tailed</strong> Bee Eaters, <strong>Cinnamon Chested</strong> Bee Eaters, <strong>White Throated</strong> Bee Eaters, or
       all three!
     </p>
     <div class='content'>
